--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Buy and Sell photos, videos, experiences and more</h2>
-                    <h3 class="section-subheading text-muted">Each photo and video will be unique and unrepeatable, it will be an NFT</h3>
+                    <h2 class="section-heading text-uppercase">Services</h2>
+                    <h3 class="section-subheading text-muted">We do not become a copy of another page, we become that page that later everyone will want to imitate</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -57,8 +57,8 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Buy and Sell photos, videos, experiences and more</h4>
+                        <p class="text-muted">Each photo and video will be unique and unrepeatable, it will be an NFT.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
