--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Innovative/h4>
+                        <h4 class="my-3">Innovative</h4>
                         <p class="text-muted">A platform with the most recent innovations that will make you live the true experience.</p>
                     </div>
                     <div class="col-md-4">
