--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/nft.jpeg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Juny</h4>
-                                <h4 class="subheading">Token pre-sale at DxSale</h4>
+                                <h4 class="subheading">Sale of exclusive NFTs</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Our NFT founder collection will be on sale (in the future you may regret not having some)</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
