--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/nft.jpeg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/nf.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Juny</h4>
+                                <h4>Q2</h4>
                                 <h4 class="subheading">Sale of exclusive NFTs</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Our NFT founder collection will be on sale (in the future you may regret not having some)</p></div>
