--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-subheading">Welcome To Paradise!</div>
-                <div class="masthead-heading text-uppercase">Something you've never seen is close to the Blockchain</div>
+                <div class="masthead-heading text-uppercase">SOMETHING YOU HAVE NEVER SEEN IS COMING TO THE BLOCKCHAIN</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Buy (soon)</a>
             </div>
         </header>
