--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/girl1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Samantha</div>
+                                <div class="portfolio-caption-subheading text-muted">Colombian</div>
                             </div>
                         </div>
                     </div>
