--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/g2.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/paula.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Paula</div>
@@ -124,7 +124,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/g2.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/lorena.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Lorena</div>
@@ -434,7 +434,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Paula</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/g3.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/paula2.jpg" alt="..." />
                                     <p>From Chile she awaits you to please you in everything.</p>
                                     <ul class="list-inline">
                                         <li>
@@ -469,7 +469,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/g2.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/lorena2.jpg" alt="..." />
                                     <p>From Mexico she awaits you to please you in everything.</p>
                                     <ul class="list-inline">
                                         <li>
