--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Samantha</h2>
                                     <p class="item-intro text-muted">You want to see more of her, soon.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/girl1.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/girl11.jpg" alt="..." />
                                     <p>From Colombia she awaits you to please you in everything.</p>
                                     <ul class="list-inline">
                                         <li>
@@ -433,7 +433,7 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Paula</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <p class="item-intro text-muted">You want to see more of her, soon.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/paula2.jpg" alt="..." />
                                     <p>From Chile she awaits you to please you in everything.</p>
                                     <ul class="list-inline">
@@ -467,8 +467,8 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Lorena</h2>
+                                    <p class="item-intro text-muted">You want to see more of her, soon.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/lorena2.jpg" alt="..." />
                                     <p>From Mexico she awaits you to please you in everything.</p>
                                     <ul class="list-inline">
