--- a/index.html
+++ b/index.html
@@ -88,14 +88,98 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
-           
-                       <form name="formulario" method="post" action="/send.php">
-  <!-- Medidor -->
-  <meter min="0" max="100"
-         low="25" high="75"
-         optimum="100" value="75">
-</form>
-                    
+                        <!-- Portfolio item 1-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/girl1.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Samantha</div>
+                                <div class="portfolio-caption-subheading text-muted">Colombian</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <!-- Portfolio item 2-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/g3.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Paula</div>
+                                <div class="portfolio-caption-subheading text-muted">Chilean</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <!-- Portfolio item 3-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/lorena.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Lorena</div>
+                                <div class="portfolio-caption-subheading text-muted">Mexican</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                        <!-- Portfolio item 4-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/d1.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Soon</div>
+                                <div class="portfolio-caption-subheading text-muted"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+                        <!-- Portfolio item 5-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/d2.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Soon</div>
+                                <div class="portfolio-caption-subheading text-muted"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <!-- Portfolio item 6-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/d3.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Soon</div>
+                                <div class="portfolio-caption-subheading text-muted"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- About-->
         <section class="page-section" id="about">
             <div class="container">
@@ -348,22 +432,19 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Token Distribution</h2>
-                                    <p class="item-intro text-muted">Find out how the token is distributed when it is launched.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/dis.jpg" alt="..." />
-                                    <p></p>
+                                    <h2 class="text-uppercase">Paula</h2>
+                                    <p class="item-intro text-muted">You want to see more of her, soon.</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/paula2.jpg" alt="..." />
+                                    <p>From Chile she awaits you to please you in everything.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Sell:</strong>
-                                            50%
+                                            <strong>Nationality:</strong>
+                                            Chilean
                                         </li>
                                         <li>
-                                            <strong>Burn:</strong>
-                                            40%
+                                            <strong>Age:</strong>
+                                            18 years old
                                         </li>
-                                        <li>
-                                            <strong>Dev and Marketing:</strong>
-                                            10%
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
@@ -456,26 +537,18 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Transaction Fee</h2>
-                                    <p class="item-intro text-muted">For each transaction carried out, a fee of 10% is charged, which will be distributed in this way.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/fee.jpg" alt="..." />
-                                    <p></p>
+                                    <h2 class="text-uppercase">?</h2>
+                                    <p class="item-intro text-muted"></p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/d2.jpg" alt="..." />
+                                    <p>She is still a mystery, you will dare to see what is behind that blur.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Burn:</strong>
-                                            3%
+                                            <strong>Nationality:</strong>
+                                            -
                                         </li>
                                         <li>
-                                            <strong>Liquidity:</strong>
-                                            3%
-                                        </li>
-                                         <li>
-                                            <strong>Holders:</strong>
-                                            3%
-                                        </li>
-                                         <li>
-                                            <strong>Prize:</strong>
-                                            1%
+                                            <strong>Age:</strong>
+                                            -
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
